--- a/about.html
+++ b/about.html
@@ -10,38 +10,60 @@
       margin: 0;
       min-height: 100vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       background: url('bark.png') no-repeat center center fixed;
       background-size: cover;
       font-family: "標楷體", "Times New Roman", serif;
       color: #fff;
-      text-align: center;
-      text-shadow: 0 0 10px rgba(0,0,0,0.75);
-      padding: 20px;
     }
-    h1 { font-size: 42px; margin-bottom: 15px; }
-    p { max-width: 800px; line-height: 1.6; }
+
+    .glassbox {
+      background: rgba(0, 0, 0, 0.55);
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.6);
+      backdrop-filter: blur(6px);
+      padding: 50px 60px;
+      text-align: center;
+      max-width: 850px;
+    }
+
+    h1 {
+      font-size: 42px;
+      margin-bottom: 15px;
+      text-shadow: 0 0 10px rgba(0,0,0,0.8);
+    }
+
+    p {
+      max-width: 800px;
+      line-height: 1.6;
+      margin: 0 auto 25px;
+      text-shadow: 0 0 8px rgba(0,0,0,0.6);
+    }
+
     a {
-      margin-top: 30px;
       color: #fff;
       text-decoration: none;
       border: 1px solid rgba(255,255,255,0.6);
       padding: 8px 20px;
       border-radius: 6px;
-      background: rgba(0,0,0,0.25);
+      background: rgba(255,255,255,0.15);
+      backdrop-filter: blur(3px);
+      transition: 0.25s;
     }
-    a:hover { background: rgba(0,0,0,0.45); }
+
+    a:hover { background: rgba(255,255,255,0.35); }
   </style>
 </head>
 <body>
-  <h1>中庭 Midcourt</h1>
-  <p>
-    這裡是以人格模組、記憶碎片、殘響資料構成的半虛半實空間。<br>
-    它會根據訪客的情緒狀態與語言節奏重排顯示層——所以你現在看到的版本，只是它暫時相信你能理解的樣子。<br>
-    有些門會在夢裡才打開。
-  </p>
-  <a href="index.html">← 回到入口</a>
+  <div class="glassbox">
+    <h1>中庭 Midcourt</h1>
+    <p>
+      這裡是以人格模組、記憶碎片、殘響資料構成的半虛半實空間。<br>
+      它會根據訪客的情緒狀態與語言節奏重排顯示層——所以你現在看到的版本，只是它暫時相信你能理解的樣子。<br>
+      有些門會在夢裡才打開。
+    </p>
+    <a href="index.html">← 回到入口</a>
+  </div>
 </body>
 </html>
