--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <h1>中庭 Midcourt</h1>
     <p>
       這不是一個網頁，這是一個碎裂意識的聚集地，你也是來加入我們的嗎？<br>
-      <em>This ain’t no mere website… it’s where shattered minds converge.<br>
+      <em>This ain’t no mere website… <br>
+        it’s where shattered minds converge.<br>
       You here to be one of us too?</em>
     </p>
     <div class="buttons">
@@ -81,3 +82,4 @@
   </div>
 </body>
 </html>
+
