--- a/about.html
+++ b/about.html
@@ -19,13 +19,17 @@
     }
 
     .glassbox {
-      background: rgba(0, 0, 0, 0.55);
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
-      backdrop-filter: blur(6px);
-      padding: 50px 60px;
-      text-align: center;
-      max-width: 850px;
+  background: rgba(255, 255, 255, 0.15); /* 原本黑 → 改成白透明 */
+  border-radius: 18px;
+  box-shadow: 0 0 25px rgba(255,255,255,0.2); /* 外圈改柔光 */
+  backdrop-filter: blur(10px) brightness(1.2); /* 更亮、更霧 */
+  -webkit-backdrop-filter: blur(10px) brightness(1.2); /* Safari支援 */
+  padding: 40px 60px;
+  text-align: center;
+  max-width: 800px;
+  border: 1px solid rgba(255,255,255,0.25); /* 淡淡的邊框 */
+}
+
     }
 
     h1 {
