--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
       color: #fff;
     }
 
-    .glassbox {
-  background: rgba(255, 255, 255, 0.15); /* 原本黑 → 改成白透明 */
+.glassbox {
+  background: rgba(43, 43, 43, 0.068); /* 原本黑 → 改成白透明 */
   border-radius: 18px;
-  box-shadow: 0 0 25px rgba(255,255,255,0.2); /* 外圈改柔光 */
-  backdrop-filter: blur(10px) brightness(1.2); /* 更亮、更霧 */
-  -webkit-backdrop-filter: blur(10px) brightness(1.2); /* Safari支援 */
+  box-shadow: 0 0 25px rgba(53, 53, 53, 0.2); /* 外圈改柔光 */
+  backdrop-filter: blur(5x) brightness(1.2); /* 更亮、更霧 */
+  -webkit-backdrop-filter: blur(5x) brightness(1.2); /* Safari支援 */
   padding: 40px 60px;
   text-align: center;
   max-width: 800px;
-  border: 1px solid rgba(255,255,255,0.25); /* 淡淡的邊框 */
+  border: 1px solid rgba(43, 43, 43, 0.068); /* 淡淡的邊框 */
+}
 }
 
     }
@@ -85,3 +86,4 @@
   </div>
 </body>
 </html>
+
