--- a/sleep.html
+++ b/sleep.html
@@ -16,28 +16,28 @@
       align-items: center;
       font-family: "標楷體", "Times New Roman", serif;
       text-align: center;
-      color: #ff2727;
+      color: #be0000;
     }
     h1 {
       font-size: 36px;
       margin-bottom: 12px;
     }
     p {
-      color: #ff9696;
+      color: #be0000;
       margin-bottom: 35px;
       line-height: 1.5;
     }
     .btn {
       background: transparent;
-      border: 1px solid #ff2727;
-      color: #ff2727;
+      border: 1px solid #be0000;
+      color: #be0000;
       padding: 10px 22px;
       border-radius: 4px;
       text-decoration: none;
       transition: 0.2s;
     }
     .btn:hover {
-      background: #ff2727;
+      background: #be0000;
       color: #000;
     }
   </style>
@@ -53,3 +53,4 @@
   </script>
 </body>
 </html>
+
