--- a/about.html
+++ b/about.html
@@ -29,7 +29,30 @@
   max-width: 800px;
   border: 1px solid rgba(255, 255, 255, 0.15); /* 加點亮邊線 */
 }
+<div class="button-container">
+  <a href="solo.html">單人聊天</a>
+  <a href="group.html">群體聊天</a>
+</div>
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 25px;
+}
 
+.button-container a {
+  font-size: 18px;
+  border: 1px solid rgba(255,255,255,0.5);
+  background: rgba(255,255,255,0.1);
+  padding: 10px 25px;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
+
+.button-container a:hover {
+  background: rgba(255,255,255,0.35);
+  transform: scale(1.05);
+}
 }
 
 
@@ -73,3 +96,4 @@
 </body>
 
 </html>
+
